# protonsearch

./: .gitignore  FEATURE_STATUS.md  LICENSE  MemoryOS_Killer_App_Strategy.md  Product_Vision_MemoryOS_Master.md  README.md  quick_actions_to_add.txt  settings_actions.txt  settings_catalog.csv  sys_actions.txt  task.md  update.json
.agents/: AGENTS.md  rules.md
.github/: FUNDING.yml
assets/model/: model_int8.onnx
graphify-out/: GRAPH_REPORT.md  graph.json
omnisearch/: Cargo.toml  installer.iss
omnisearch/src/: ai.rs  applog.rs  circle_to_search.rs  git_indexer.rs  gpu_launcher.rs  indexer.rs  launcher.rs  main.rs  search.rs  settings.rs  settings_ui.rs
omnisearch/ui/: settings.slint
opensearch-os/: Cargo.toml  build.rs  installer.iss  memory.md
opensearch-os/setup/: Uninstall.bat
opensearch-os/src/: ai.rs  browser_indexer.rs  git_indexer.rs  hotkey.rs  indexer.rs  inspect_db.rs  launcher.rs  main.rs  markdown.rs  search.rs  settings.rs  settings_ui.rs  uninstall.rs  voice.rs
opensearch-os/ui/: settings.slint
packaging/winget/manifests/p/PranshulSoni/OmniSearch/1.0.0/: PranshulSoni.OmniSearch.installer.yaml  PranshulSoni.OmniSearch.locale.en-US.yaml  PranshulSoni.OmniSearch.yaml
protonsearch/: Cargo.toml  build.rs  installer.iss
protonsearch/src/: ai.rs  applog.rs  browser_indexer.rs  circle_to_search.rs  git_indexer.rs  hotkey.rs  indexer.rs  inspect_db.rs  launcher.rs  main.rs  markdown.rs  search.rs  settings.rs  settings_startup.rs  settings_ui.rs  uninstall.rs
protonsearch/ui/: settings.slint
scripts/: convert_logos.py  embed_catalog.py  install.ps1  update-sign-install.ps1
