[package]
name = "opensearch-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opensearch-os"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_System_Shutdown",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "Media_Ocr",
    "Graphics_Imaging",
] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "copy-dylibs"] }
tokenizers = { version = "0.20", default-features = false, features = ["progressbar", "onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
pdf-extract = "0.10"
docx-lite = "0.1"
everything-ipc = "0.1.3"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
