[package]
name = "opensearch-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opensearch-os"
path = "src/main.rs"

[[bin]]
name = "inspect-db"
path = "src/inspect_db.rs"

[[bin]]
name = "test_slint"
path = "src/bin/test_slint.rs"

[[bin]]
name = "uninstall"
path = "src/uninstall.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_System_Registry",
    "Win32_System_Shutdown",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
    "implement",
    "Storage",
    "Storage_Streams",
    "Media_Ocr",
    "Media_SpeechRecognition",
    "Graphics_Imaging",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }
windows-implement = "0.58"
windows-core = "0.58"


serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
notify = "6"
pdf-extract = "0.10"
docx-lite = "0.1"
winvd = "0.0.49"
image = "0.24"
slint = "1.17.0"
once_cell = "1.21.4"
winreg = "0.56.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
slint-build = "1.17.0"
